CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(texhck)
SET(MMD_NAME "TEXhck")
SET(MMD_DESCRIPTION "Texture compression library")
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${texhck_SOURCE_DIR}/CMake/modules)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY test)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY lib)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY lib)

# Warnings
IF (MSVC)
   IF (CMAKE_CXX_FLAGS MATCHES "/W[0-4]")
      STRING(REGEX REPLACE "/W[0-4]" "/W4" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
   ELSE ()
      SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
   ENDIF ()
ELSEIF (CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
   SET(CMAKE_C_FLAGS   "${CMAKE_C_FLAGS}   -Wall -Wextra -Wno-variadic-macros -Wno-long-long")
   SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wno-variadic-macros -Wno-long-long")
ENDIF ()

SET(TEXHCK_SRC texhck.c)
ADD_DEFINITIONS(-fPIC)
ADD_LIBRARY(texhck ${TEXHCK_SRC})
TARGET_LINK_LIBRARIES(texhck)

# vim: set ts=8 sw=3 tw=0
